tests/break/invalid/syntax/BrekErr.wacc
# break typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while true do
    brek
  done
end
